# pylocfield

./: README.md  pyproject.toml
.github/workflows/: documentation.yml
doc/source/: conf.py  index.rst  theory.rst  usage.rst
examples/: Makefile  convergence.py  example.py  fe.py  mnsi.py  visualization.py
pylocfield/: ewald.py  grid.py  misra.py  realspace.py  utils.py  visualization.py
