[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylocfield"
version = "0.0.1"
description = "A simple package to perform magnetic dipole sums."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Pietro Bonfa", email = "pietro.bonfa@posteo.net" }
]

dependencies = [
    "numpy",
    "ase",
    "scipy",
    "spglib"
]

[project.optional-dependencies]
examples = ["matplotlib"]

[project.urls]
Homepage = "https://github.com/bonfus/pylocfield"
Repository = "https://github.com/bonfus/pylocfield"

